# spy

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE.md  README.md  appveyor.yml  changelog.html  conanfile.py  dir_4e9b28132723c9d0ee84f5ecb8c4bb14.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_ed0480bc1233bdfce4cf5811b3b35f4a.html  doxygen-awesome.css  doxygen.css  godbolt.js  group__api.html  group__api_ga03dc3f2a9b02b025902f9df3b2db53ab.html  group__api_ga03e4a3ae6533a43cdf9bcbf1317707cd.html  group__api_ga16591d3ea9aaa049682bfbedd519dc43.html  group__api_ga28313e4f9673ea0f5d0ca44ffd1a967a.html  group__api_ga2d96c18fea5b9a06ac37487ab570599d.html  group__api_ga37e2c07363dadf1eb40e89a9a91f8121.html  group__api_ga45f64b82d4939d55865b0e6a311b2dde.html  group__api_ga63eef44bc05ea6f77f278ba5b394ada8.html  group__api_gaa091fe192a7f9d0d164cf7546083200d.html  group__api_gaad5f2aa34188a02b894a0d8c7e402d6e.html  group__api_gaad706954aedb6aaf6ff1a9858a971e00.html  group__api_gadb7c5be967e00cff21ae5b98cc12a7dc.html  group__api_gaed9a94996ad095314bc4f6c0f0aba213.html  group__api_gafe99b815db524eacf659ba8348ca2e0d.html  index.html  index.js  licence.html  namespaceliteral.html  namespacespy.html  namespacesupports.html  navtreedata.js  navtreeindex0.js  (+4 more)
.circleci/: config.yml  prepare.sh  prepare_cc.sh  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yml  integration.yml  package-standalone.yml  release-assets.yml  unit.yml
cmake/: FindSphinx.cmake  compiler.cmake  dependencies.cmake  download.CMakeLists.cmake.in  download.cmake  parse_revision.cmake  spy-config.cmake  test.cmake
doc/: CMakeLists.txt  Doxyfile  base.html  changelog.md  changelog.rst  color.css  compiler.rst  conf.py.in  howto.rst  index.hpp  index.rst  layout.xml  libc.rst  licence.md  os.rst  rationale.rst  setup.hpp  spy.tag  stdlib.rst  version.rst
docs/: index.html
include/: spy.hpp
include/spy/: accelerator.hpp  arch.hpp  compiler.hpp  data_model.hpp  detail.hpp  libc.hpp  os.hpp  sanitizers.hpp  simd.hpp  spy.hpp  standard.hpp  stdlib.hpp  types.hpp  version.hpp
include/spy/simd/: arm.hpp  ppc.hpp  riscv.hpp  wasm.hpp  x86.hpp
script/: embed.py
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  functions_0.js  groups_0.js  groups_1.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+2 more)
src/: spy.hpp
src/spy/: accelerator.hpp  arch.hpp  compiler.hpp  detail.hpp  libc.hpp  simd.hpp  stdlib.hpp
src/spy/simd/: arm.hpp  ppc.hpp
standalone/spy/: spy.hpp
test/: CMakeLists.txt  accelerator.cu  arch.cpp  compiler.cpp  data_model.cpp  libc.cpp  os.cpp  simd.cpp  stdlib.cpp  test.hpp  version.cpp
test/integration/: main.cpp
test/integration/cpm-test/: CMakeLists.txt
test/integration/fetch-test/: CMakeLists.txt
test/integration/install-test/: CMakeLists.txt
test/samples/: architecture.cpp  compiler.cpp  cuda.cpp  data_model.cpp  libc.cpp  os.cpp  posix.cpp  sanitizers.cpp  simd-additional.cpp  simd-arch.cpp  simd.cpp  standard.cpp  stdlib.cpp  sycl.cpp
test/toolchain/: clang.aarch64.cmake  clang.aarch64.debug.cmake  clang.aarch64.release.cmake  clang.arm.debug.cmake  clang.arm.release.cmake  clang.ppc64le.debug.cmake  clang.ppc64le.release.cmake  clang.rvv128.cmake  clang.wasm.cmake  clang.x86.cmake  clang.x86.debug.cmake  clang.x86.release.cmake  clang.x86_osx.cmake  clang.x86_osx.debug.cmake  clang.x86_osx.release.cmake  dpcpp.sycl.cmake  dpcpp.x86.cmake  emcc.cmake  gcc.aarch64.cmake  gcc.aarch64.debug.cmake  gcc.aarch64.release.cmake  gcc.aarch64.sve.cmake  gcc.aarch64.sve.debug.cmake  gcc.aarch64.sve.release.cmake  gcc.aarch64.sve2.cmake  gcc.arm.debug.cmake  gcc.arm.release.cmake  gcc.ppc.debug.cmake  gcc.ppc.release.cmake  gcc.ppc64.cmake  gcc.ppc64.debug.cmake  gcc.ppc64.release.cmake  gcc.x86.cmake  gcc.x86.debug.cmake  gcc.x86.release.cmake  gcc.x86_osx.cmake  gcc.x86_osx.debug.cmake  gcc.x86_osx.release.cmake  run_rvv128.sh  run_wasm.sh
test/unit/: accelerator.cpp  accelerator.cu  arch.cpp  compiler.cpp  data_model.cpp  libc.cpp  os.cpp  simd.cpp  stdlib.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
